--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,37 @@
 
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+  padding: 0;
+  margin: 0;
+}
 
+body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: darkslategray;
+  background-color: beige;
+  text-align: center;
+  font-size: 1.1em;
+  line-height: 1.5;
+}
 
 .back-image {
-  background-image: url("/images/jeroen-den-otter-1169089-unsplash.jpg")
+  background-image: url("/images/jeroen-den-otter-1169089-unsplash.jpg");
+  position: absolute;
+  background-color:beige;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 450px;
+  z-index: -1;
+  opacity: 0.5;
+}
+
+img {
+  display: block;
+  width: 100%;
+  height: auto;
 }
